--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,10 @@
 		</div>
 		<div class="footer-col">
 			<h4 class="header-4"><a href="">social</a></h4>
-			</div>
+			<a href="" class="soc"><i class="fab fa-facebook-f"></i></a>
+			<a href="" class="soc"><i class="fab fa-twitter"></i></a>
+			<a href="" class="soc"><i class="fab fa-google-plus-g"></i></a>
+		</div>
 	</footer>
 </body>
 </html>
