--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 		<div class="footer-col">
 			<h4 class="header-4"><a href="">social</a></h4>
 			<a href="" class="soc"><i class="fab fa-facebook-f"></i></a>
-			</div>
+			<a href="" class="soc"><i class="fab fa-twitter"></i></a>
+			<a href="" class="soc"><i class="fab fa-google-plus-g"></i></a>
+		</div>
 	</footer>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
 </body>
